--- a/css/style.css
+++ b/css/style.css
@@ -1,22 +1,19 @@
 body {
   margin: 0px;
   font-family: Arial, Helvetica, sans-serif;
+  padding-bottom: 600px;
 }
 
 h1,
 ul,
-p{
+p {
   margin: 0px;
-  
 }
 
 ul {
-  margin: 0px;
   padding: 0px;
   list-style: none;
 }
-
-
 
 a {
   text-decoration: none;
@@ -74,28 +71,28 @@ img {
   width: 100%;
 }
 
-@media (max-width: 800px){
+@media (max-width: 800px) {
   .header-menu {
     gap: 20px;
   }
-  .header-menu a{
-    background-color: #111111;
+  .header-menu a {
+    background: #111111;
     padding: 12px 16px;
     border-radius: 4px;
   }
-  .header-menu a:hover{
-    background: #2E2E2E;
+  .header-menu a:hover {
+    background-color: #2e2e2e;
   }
-  .header a:after{
+  .header a:after {
     display: none;
   }
 }
 
-@media (max-width: 600px){
+@media (max-width: 600px) {
   .header-menu {
     gap: 12px;
   }
-  .header-menu a{
+  .header-menu a {
     padding: 8px 12px;
     font-size: 14px;
   }
@@ -104,6 +101,7 @@ img {
 .introducao-bg {
   background: #000000;
   color: #ffffff;
+  box-shadow: inset 0 -120px #ffffff;
 }
 
 .introducao {
@@ -120,7 +118,13 @@ img {
 
 .introducao-conteudo {
   align-self: end;
-  padding-bottom: 80px;
+  padding-bottom: 200px;
+}
+
+.introducao img {
+  height: 100%;
+  object-fit: cover;
+  border-radius: 4px;
 }
 
 .introducao h1 {
